--- a/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -1554,6 +1554,7 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
+    <Content Include="InterfacesUsuario\GridChoferes.png" />
     <Content Include="Reportes\ReporteSocioMovil.aspx" />
     <Content Include="Scripts\Extjs\bootstrap.js" />
     <Content Include="Scripts\Extjs\build.xml" />
@@ -3686,7 +3687,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\images\Choferes\" />
-    <Folder Include="InterfacesUsuario\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -3715,6 +3715,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="InterfacesUsuario\Adm Choferes.mck" />
+    <None Include="InterfacesUsuario\Fondo Emergencia Chofer.mck" />
+    <None Include="InterfacesUsuario\Socios.mck" />
     <None Include="Scripts\Extjs\resources\ext-theme-classic-sandbox\Readme.md" />
     <None Include="Scripts\Extjs\resources\ext-theme-classic\Readme.md" />
     <None Include="Scripts\Extjs\resources\ext-theme-gray\Readme.md" />
