--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -1554,7 +1554,9 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
+    <Content Include="InterfacesUsuario\FormHoja.png" />
     <Content Include="InterfacesUsuario\GridChoferes.png" />
+    <Content Include="InterfacesUsuario\GridHojas.png" />
     <Content Include="Reportes\ReporteSocioMovil.aspx" />
     <Content Include="Scripts\Extjs\bootstrap.js" />
     <Content Include="Scripts\Extjs\build.xml" />
@@ -3717,6 +3719,7 @@
   <ItemGroup>
     <None Include="InterfacesUsuario\Adm Choferes.mck" />
     <None Include="InterfacesUsuario\Fondo Emergencia Chofer.mck" />
+    <None Include="InterfacesUsuario\Modulo de Hojas.mck" />
     <None Include="InterfacesUsuario\Socios.mck" />
     <None Include="Scripts\Extjs\resources\ext-theme-classic-sandbox\Readme.md" />
     <None Include="Scripts\Extjs\resources\ext-theme-classic\Readme.md" />
