--- a/Sindicato.Business/Sindicato.Business.csproj
+++ b/Sindicato.Business/Sindicato.Business.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SD_KARDEX_OBLIGACIONManager.cs" />
+    <Compile Include="SD_OBLIGACIONES_SOCIOManager.cs" />
+    <Compile Include="SD_KARDEX_FMManager.cs" />
     <Compile Include="SD_GARANTESManager.cs" />
     <Compile Include="SD_HOJAS_CONTROLManager.cs" />
     <Compile Include="SD_PARAMETROS_LINEAManager.cs" />
