--- a/Sindicato.Business/Sindicato.Business.csproj
+++ b/Sindicato.Business/Sindicato.Business.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SD_MOVILESManager.cs" />
     <Compile Include="SD_PARADASManager.cs" />
     <Compile Include="SD_VENTA_HOJAS_CONTROLManager.cs" />
     <Compile Include="SD_DETALLE_HOJASManager.cs" />
