--- a/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -230,6 +230,7 @@
     <Content Include="App\Model\Clientes\Clientes.js" />
     <Content Include="App\Model\Clientes\Kardex.js" />
     <Content Include="App\Model\Autos\Autos.js" />
+    <Content Include="App\Model\Cierres\Cierres.js" />
     <Content Include="App\Model\RetirosSocio\Retiros.js" />
     <Content Include="App\Model\IngresosSocio\Ingresos.js" />
     <Content Include="App\Model\Paradas\Paradas.js" />
@@ -266,6 +267,7 @@
     <Content Include="App\Store\Clientes\Clientes.js" />
     <Content Include="App\Store\Clientes\Kardex.js" />
     <Content Include="App\Store\Autos\Autos.js" />
+    <Content Include="App\Store\Cierres\Cierres.js" />
     <Content Include="App\Store\RetirosSocio\Retiros.js" />
     <Content Include="App\Store\IngresosSocio\Ingresos.js" />
     <Content Include="App\Store\Paradas\Paradas.js" />
@@ -330,11 +332,11 @@
     <Content Include="App\View\Autos\Grids.js" />
     <Content Include="App\View\Autos\GridAutos.js" />
     <Content Include="App\View\Autos\Principal.js" />
+    <Content Include="App\View\Cierres\FormCierre.js" />
+    <Content Include="App\View\Cierres\GridCierres.js" />
+    <Content Include="App\View\Cierres\Principal.js" />
     <Content Include="App\View\RetirosSocio\FormRetiro.js" />
-    <Content Include="App\View\RetirosSocio\Forms.js" />
     <Content Include="App\View\RetirosSocio\GridRetiros.js" />
-    <Content Include="App\View\RetirosSocio\Grids.js" />
-    <Content Include="App\View\RetirosSocio\PanelIngresos.js" />
     <Content Include="App\View\RetirosSocio\Principal.js" />
     <Content Include="App\View\IngresosSocio\FormIngreso.js" />
     <Content Include="App\View\IngresosSocio\Forms.js" />
