--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CajasServices.cs" />
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="Interfaces\IDescuentosServices.cs" />
     <Compile Include="Interfaces\ICierresServices.cs" />
     <Compile Include="OtrosServices.cs" />
     <Compile Include="Interfaces\IOtrosServices.cs" />
