--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CierresServices.cs" />
     <Compile Include="Interfaces\IDescuentosServices.cs" />
     <Compile Include="Interfaces\ICierresServices.cs" />
+    <Compile Include="Model\OtrosModel.cs" />
     <Compile Include="OtrosServices.cs" />
     <Compile Include="Interfaces\IOtrosServices.cs" />
     <Compile Include="Interfaces\IAutosServices.cs" />
