--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -52,9 +52,12 @@
     <Compile Include="CajasServices.cs" />
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="TransferenciasServices.cs" />
     <Compile Include="DescuentosServices.cs" />
+    <Compile Include="Interfaces\ITransferenciasServices.cs" />
     <Compile Include="Interfaces\IDescuentosServices.cs" />
     <Compile Include="Interfaces\ICierresServices.cs" />
+    <Compile Include="Model\TransferenciasModel.cs" />
     <Compile Include="Model\OtrosModel.cs" />
     <Compile Include="OtrosServices.cs" />
     <Compile Include="Interfaces\IOtrosServices.cs" />
