--- a/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
+++ b/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SD_TRANSFERENCIASManager.cs" />
     <Compile Include="SD_EGRESOSManager.cs" />
     <Compile Include="SD_INGRESOSManager.cs" />
     <Compile Include="SD_CIERRESManager.cs" />
