--- a/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
+++ b/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
@@ -89,6 +89,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DataMigration\DLL.sql" />
     <Content Include="DataMigration\DLL18062015.sql" />
     <Content Include="DataMigration\OrdenScripts.sql" />
     <Content Include="DataMigration\P_SD_ALTA_SD_CHOFERES.sql" />
