FrontEnd Amortizaciones Solo Falta Verificar Probar

--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -226,6 +226,7 @@
     <Content Include="App\extensible\locale\extensible-lang-sv_SE.js" />
     <Content Include="App\extensible\locale\extensible-lang-zh_CN.js" />
     <Content Include="App\extensible\locale\extensible-lang-zh_TW.js" />
+    <Content Include="App\Model\Amortizaciones\Kardex.js" />
     <Content Include="App\Model\Cajas\Cajas.js" />
     <Content Include="App\Model\Cajas\Kardex.js" />
     <Content Include="App\Model\Choferes\Choferes.js" />
@@ -234,6 +235,8 @@
     <Content Include="App\Model\Clientes\Kardex.js" />
     <Content Include="App\Model\Autos\Autos.js" />
     <Content Include="App\Model\Cierres\Cierres.js" />
+    <Content Include="App\Model\Amortizaciones\Amortizaciones.js" />
+    <Content Include="App\Model\Obligaciones\Obligaciones.js" />
     <Content Include="App\Model\Transferencias\Transferencias.js" />
     <Content Include="App\Model\Descuentos\Detalles.js" />
     <Content Include="App\Model\Descuentos\Descuentos.js" />
@@ -264,6 +267,7 @@
     <Content Include="App\Model\Ventas\Precios.js" />
     <Content Include="App\Model\Ventas\Ventas.js" />
     <Content Include="App\Model\Ventas\VentasCredito.js" />
+    <Content Include="App\Store\Amortizaciones\Kardex.js" />
     <Content Include="App\Store\Autos\AutosSocios.js" />
     <Content Include="App\Store\Cajas\Cajas.js" />
     <Content Include="App\Store\Cajas\Kardex.js" />
@@ -273,6 +277,8 @@
     <Content Include="App\Store\Clientes\Kardex.js" />
     <Content Include="App\Store\Autos\Autos.js" />
     <Content Include="App\Store\Cierres\Cierres.js" />
+    <Content Include="App\Store\Amortizaciones\Amortizaciones.js" />
+    <Content Include="App\Store\Obligaciones\Obligaciones.js" />
     <Content Include="App\Store\Transferencias\Transferencias.js" />
     <Content Include="App\Store\Descuentos\Detalles.js" />
     <Content Include="App\Store\Descuentos\Descuentos.js" />
@@ -342,6 +348,12 @@
     <Content Include="App\View\Cierres\FormCierre.js" />
     <Content Include="App\View\Cierres\GridCierres.js" />
     <Content Include="App\View\Cierres\Principal.js" />
+    <Content Include="App\View\Amortizaciones\FormAmortizacion.js" />
+    <Content Include="App\View\Amortizaciones\GridAmortizaciones.js" />
+    <Content Include="App\View\Amortizaciones\Principal.js" />
+    <Content Include="App\View\Copia de Egresos\FormEgreso.js" />
+    <Content Include="App\View\Copia de Egresos\GridEgresos.js" />
+    <Content Include="App\View\Copia de Egresos\Principal.js" />
     <Content Include="App\View\Transferencias\FormTransferencia.js" />
     <Content Include="App\View\Transferencias\GridTransferencias.js" />
     <Content Include="App\View\Transferencias\Principal.js" />
