backend Venta de Hojas

--- a/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
+++ b/branches/Sindicato/Sindicato.Business/Sindicato.Business.csproj
@@ -56,7 +56,7 @@
     <Compile Include="SD_SOCIO_MOVIL_AUTOSManager.cs" />
     <Compile Include="SD_MOVILESManager.cs" />
     <Compile Include="SD_PARADASManager.cs" />
-    <Compile Include="SD_VENTA_HOJAS_CONTROLManager.cs" />
+    <Compile Include="SD_VENTA_HOJASManager.cs" />
     <Compile Include="SD_DETALLE_HOJASManager.cs" />
     <Compile Include="SD_KARDEX_OBLIGACIONManager.cs" />
     <Compile Include="SD_OBLIGACIONES_SOCIOManager.cs" />
